# random-notes

./: .gitignore  LICENSE  meson.build
build-aux/flatpak/: ar.com.nahuelgomez.RandomNotes.json  com.nahuelwexd.RandomNotes.json
build-aux/meson/: post-install.py
data/: ar.com.nahuelgomez.RandomNotes.appdata.xml.in  ar.com.nahuelgomez.RandomNotes.desktop.in  com.nahuelwexd.RandomNotes.appdata.xml.in  com.nahuelwexd.RandomNotes.desktop.in  meson.build
data/icons/: icon-resources.xml  meson.build
po/: POTFILES  meson.build
src/: meson.build  random-notes.vala  rn-app.vala  rn-resources.xml  style.css  ui-resources.xml
src/models/: meson.build  rn-note.vala
src/repositories/: meson.build  rn-note-repository.vala
src/utils/: meson.build  rn-file-utils.vala  rn-note-sorter.vala  rn-observable-list.vala  rn-thread-utils.vala
src/view-models/: meson.build  rn-note-view-model.vala
src/views/: meson.build  rn-note-list-view.blp  rn-note-list-view.ui  rn-note-list-view.vala  rn-note-view.blp  rn-note-view.ui  rn-note-view.vala  rn-view.vala
src/widgets/: meson.build  rn-note-row.blp  rn-note-row.ui
src/windows/: meson.build  rn-app-window.blp  rn-app-window.ui  rn-app-window.vala
